# rag-agent-tidb

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/ui/: App.tsx
rag_agent/: config.py  db.py  embedding.py  ingest.py  memory.py  retriever.py  schema.py
scripts/: api.py  chat.py  ingest_csv.py  init_db.py
